--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,56 +1,56 @@
 @book{klenke2013probability,
-  title={Probability Theory: A Comprehensive Course},
-  author={Klenke, A.},
-  isbn={9781447153603},
-  series={Universitext},
-  year={2013},
-  publisher={Springer London}
+  title     = {Probability Theory: A Comprehensive Course},
+  author    = {Klenke, A.},
+  isbn      = {9781447153603},
+  series    = {Universitext},
+  year      = {2013},
+  publisher = {Springer London}
 }
 
 @book{lima1998algebra,
-  title={Algebra Lineal},
-  author={Lima, E.L.},
-  series={Colección textos del IMCA},
-  year={1998},
-  publisher={Instituto de Matemática y Ciencias Afines, UNI}
+  title     = {Algebra Lineal},
+  author    = {Lima, E.L.},
+  series    = {Colección textos del IMCA},
+  year      = {1998},
+  publisher = {Instituto de Matemática y Ciencias Afines, UNI}
 }
 
 @book{cpita:1995,
-  title={Cálculo vectorial},
-  author={Ruiz, C.P.},
-  isbn={9789688805299},
-  year={1995},
-  publisher={Prentice Hall Hispanoamericana, S.A.}
+  title     = {Cálculo vectorial},
+  author    = {Ruiz, C.P.},
+  isbn      = {9789688805299},
+  year      = {1995},
+  publisher = {Prentice Hall Hispanoamericana, S.A.}
 }
 
 @misc{rvm:UoT,
-    author={University of Toronto},
-    title={Random Vectors and Matrices},
-    url={https://www.utstat.toronto.edu/~brunner/oldclass/appliedf11/handouts/2101f11RandomVectorsMVN.pdf}
+  author = {University of Toronto},
+  title  = {Random Vectors and Matrices},
+  url    = {https://www.utstat.toronto.edu/~brunner/oldclass/appliedf11/handouts/2101f11RandomVectorsMVN.pdf}
 }
 
 @book{Makela,
-    author = {Bagirov, Adil and Karmitsa, Napsu and Mkel, Marko M.},
-    title = {Introduction to Nonsmooth Optimization: Theory, Practice and Software},
-    year = {2014},
-    publisher = {Springer Publishing Company, Incorporated},
+  author    = {Bagirov, Adil and Karmitsa, Napsu and Mkel, Marko M.},
+  title     = {Introduction to Nonsmooth Optimization: Theory, Practice and Software},
+  year      = {2014},
+  publisher = {Springer Publishing Company, Incorporated}
 }
 
 @misc{Cuhk,
-    author={Unknown},
-    title={Subgradient of Convex Function},
-    url={https://www.math.cuhk.edu.hk/course_builder/1920/math4230/Note8.pdf}
+  author = {Unknown},
+  title  = {Subgradient of Convex Function},
+  url    = {https://www.math.cuhk.edu.hk/course_builder/1920/math4230/Note8.pdf}
 }
 
 
 @book{gall2022measure,
-    title={Measure Theory, Probability, and Stochastic Processes},
-    author={Gall, J.F.L.},
-    isbn={9783031142055},
-    series={Graduate Texts in Mathematics},
-    url={https://books.google.com.pe/books?id=Ba2YEAAAQBAJ},
-    year={2022},
-    publisher={Springer International Publishing}
+  title     = {Measure Theory, Probability, and Stochastic Processes},
+  author    = {Gall, J.F.L.},
+  isbn      = {9783031142055},
+  series    = {Graduate Texts in Mathematics},
+  url       = {https://books.google.com.pe/books?id=Ba2YEAAAQBAJ},
+  year      = {2022},
+  publisher = {Springer International Publishing}
 }
 
 @article{JMLR:v17:14-296,
@@ -65,7 +65,13 @@
 }
 
 @misc{utp:reservas,
-    author = {UTP},
-    TITLE = {UTP Reservas},
-    URL = {https://reservarecursos.utp.edu.pe/ref-acad}
+  author = {UTP},
+  title  = {UTP Reservas},
+  url    = {https://reservarecursos.utp.edu.pe/ref-acad}
+}
+
+@misc{zoom:reports,
+  author = {Zoom},
+  title  = {Informes},
+  url    = {https://zoom.us/account/report?isPersonal=true#/usageReports}
 }
